welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:2: error: Missing closing brace `}' assumed here
def testg():Boolean= {
^SnakeBuggle:11: error: expected start of definition
override def run() {
         ^